--- a/gb/19/8/8/n11439099.md
+++ b/gb/19/8/8/n11439099.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gwbfbn385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gwbfbn385/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gwbfbn385/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gwbfbn385/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gwbfbn385/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gwbfbn385/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gwbfbn385/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gwbfbn385/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳议员警告中共威胁如纳粹 需直面严峻挑战</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/20190808-Chi-Jin-Andrew-Hastie-600x400.jpg" />
 <h6>澳洲议会情报与安全联合委员会主席哈斯蒂（Andrew Hastie）。资料图片。（澳新社）
 </h6>
 <hr>
-<p>【大纪元2019年08月08日讯】（大纪元记者天睿<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲议会情报与安全联合委员会主席哈斯蒂（Andrew Hastie）发出警告说，随着<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>大力推行对西方社会的渗透，澳洲正面临着前所未有的经济与国家安全的挑战。</p>
-<p>他说，西方应对<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>扩张的策略是失败的，就像当初没能阻止纳粹一样。但对中共政权态度强硬的哈斯蒂强调说，他并非针对中国人。</p>
-<p>8月8日，哈斯蒂在悉尼晨锋报上发表评论文章，呼吁<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>政府直面中共野心所带来的现实问题。</p>
-<p>他表示，如果澳洲政府在思想上无法真正看清楚共产主义带来的“<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E5%A8%81%E8%83%81.md#1">威胁</a>”，“无法理解澳洲社会、议会、大学、私企和慈善行业所面临的挑战”并选择主动直面问题，那么“我们将面临被动选择”的命运，“我们的主权、我们的自由，都将蒙受损失”。</p>
+<p>【大纪元2019年08月08日讯】（大纪元记者天睿<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲议会情报与安全联合委员会主席哈斯蒂（Andrew Hastie）发出警告说，随着<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>大力推行对西方社会的渗透，澳洲正面临着前所未有的经济与国家安全的挑战。</p>
+<p>他说，西方应对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>扩张的策略是失败的，就像当初没能阻止纳粹一样。但对中共政权态度强硬的哈斯蒂强调说，他并非针对中国人。</p>
+<p>8月8日，哈斯蒂在悉尼晨锋报上发表评论文章，呼吁<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>政府直面中共野心所带来的现实问题。</p>
+<p>他表示，如果澳洲政府在思想上无法真正看清楚共产主义带来的“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A8%81%E8%83%81.md#1">威胁</a>”，“无法理解澳洲社会、议会、大学、私企和慈善行业所面临的挑战”并选择主动直面问题，那么“我们将面临被动选择”的命运，“我们的主权、我们的自由，都将蒙受损失”。</p>
 <p>哈斯蒂说：“现在我们最大的弱点不在于我们的基础设施，而是我们的思想，那种智力缺陷使得我们体制薄弱。”</p>
 <p>哈斯蒂是莫里森政府中对中共政权发出最强硬声音的一位议员，他把西方世界应对中共的策略比作马奇诺防线——一道由法国耗巨资建造的、自以为坚固的防线，但被德军轻易绕过，最后连首都都丢了。</p>
 <p>“西方曾经相信，经济自由化会自然而然地为中国带来民主。这就是我们的马奇诺防线，（我们以为）它将会保护我们的安全，就像法国人认为他们的钢筋混凝土防线能在1940年保护他们，并阻止德国进军一样。但他们的想法带来的是灾难性失败。法国错估了机动化战争的发展变化。”他在评论文章中说。</p>
 <p>“就像法国一样，澳洲也没能看清我们的独裁邻国变得有多机动化。更糟糕的是，我们忽略了意识形态在中共的印太地区行动中所扮演的角色。我们总是用我们自己的视角来理解中共的行动，例如他们修建公路和港口的动机，而不是以中共的视角（来看待问题）。”</p>
 <p>哈斯蒂还表示：“共产主义者就是共产主义者，他们信奉那样的理念。所以，只有严肃对待这种理念，并在政治上重视起来，才能理解这种现象。”</p>
-<p>他对联盟党政府通过了反间谍法、反外国影响力和干预法，并禁止华为参与5G网络建设加以肯定，但表示澳洲仍需要做更多。目前，澳洲最大的弱点就是没能在思想上真正<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E8%AE%A4%E6%B8%85.md#1">认清</a>国家所面临的<ahref="https://github.com/gwbfbn385/djy/blob/master/gb/tag/%E5%A8%81%E8%83%81.md#1">威胁</a>。要保障澳洲的未来，下一步要做的就应该是直接面对摆在眼前的地缘政治斗争现实，并随之进行调整。</p>
+<p>他对联盟党政府通过了反间谍法、反外国影响力和干预法，并禁止华为参与5G网络建设加以肯定，但表示澳洲仍需要做更多。目前，澳洲最大的弱点就是没能在思想上真正<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AE%A4%E6%B8%85.md#1">认清</a>国家所面临的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A8%81%E8%83%81.md#1">威胁</a>。要保障澳洲的未来，下一步要做的就应该是直接面对摆在眼前的地缘政治斗争现实，并随之进行调整。</p>
 <p>“下一个十年将考验我们的民主价值、我们的经济、我们的盟友和我们的安全（措施），而这将是澳洲历史上从来不曾有过的考验。”他写道。</p>
 <p>文章发表后，哈斯蒂对悉尼晨锋报说，他并非在批评中国人。“我的评论并未针对中国人。我们有许多共同点，也有许多澳洲华人为我们的社会结构做出了非常宝贵的贡献。”</p>
 <p>他还为那些正在香港参加抗议的中国人感到担心，因为外界越来越担忧中共可能派军队镇压。</p>
@@ -27,42 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/6/26/n11346682.md#1">澳历史学家哥大演讲：中共处于崩溃前夕</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/6/28/n11352851.md#1">周晓辉：西方主流媒体在变化 习无法回避“活摘”</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/7/16/n11389135.md#1">【特稿】法轮功反迫害20年 和平抗暴唤良知</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/7/29/n11416301.md#1">澳洲促统会名誉会长被Crown奉为上宾</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/7/29/n11416978.md#1">守护香港 阿德莱德728集会声援“反送中”</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/8/1/n11423130.md#1">澳企遭黑客攻击加剧 数据泄露事件爆涨700%</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/8/7/n11436674.md#1">支持香港抗议者 国际人权律师吁澳洲发声</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/8/7/n11436713.md#1">谭笑飞：孙杨、贸易战和香港</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/8/7/n11436717.md#1">忧中共军管 居香港澳洲华人打算歇业回澳</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/5/n12308198.md#1">惧中共报复 澳中国留学生不敢发声支持香港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/26/n11346682.md#1">澳历史学家哥大演讲：中共处于崩溃前夕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/28/n11352851.md#1">周晓辉：西方主流媒体在变化 习无法回避“活摘”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/16/n11389135.md#1">【特稿】法轮功反迫害20年 和平抗暴唤良知</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/29/n11416301.md#1">澳洲促统会名誉会长被Crown奉为上宾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/29/n11416978.md#1">守护香港 阿德莱德728集会声援“反送中”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/1/n11423130.md#1">澳企遭黑客攻击加剧 数据泄露事件爆涨700%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/7/n11436674.md#1">支持香港抗议者 国际人权律师吁澳洲发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/7/n11436713.md#1">谭笑飞：孙杨、贸易战和香港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/7/n11436717.md#1">忧中共军管 居香港澳洲华人打算歇业回澳</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689970.md#1">政府呼吁提高工资增长同时兼顾企业生存能力</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/22/n11470069.md#1" target="_blank">共产暴政录：西藏问题</a></li><li><a href="https://github.com/gwbfbn385/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/3/n12302226.md#1">【翻墙必看】“老大哥”藏在大陆人家中监视</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/3/n12302964.md#1">中共高调宣传北斗导航 遭质疑窃全球数据</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/4/n12306655.md#1">黎巴嫩首都爆炸 蘑菇云腾起 数千死伤</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/3/n12304599.md#1">主业受创 1800亿债务缠身 王健林成“首负”</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/2/n12301564.md#1">在台比利时男疑染疫数月才确诊 纽国有类似个案</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/2/n12301758.md#1">录综艺节目累到脱妆 黄晓明真实相貌引热议</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/2/n12301702.md#1">景甜承认割双眼皮失败 直播中自嘲整成悲伤蛙</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/2/n12301510.md#1">唐嫣产后首次公开亮相 亲口澄清宝宝性别</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/3/n12304220.md#1">“战狼”吴京主演 中共高调开拍反美片引嘲讽</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/3/n12304444.md#1">59岁台湾艺人罗霈颖猝逝 死因待查</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/8/2/n12300771.md#1">【历史回眸】为中国献身的美国飞行员</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/6/4/n12162213.md#1">【康熙大帝】康熙晚年与雍正嗣位</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/7/21/n12271399.md#1">【医案】迷迷红尘路</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/20/7/24/n12279753.md#1">落榜士子痛骂考官  因何转运金榜题名？</a></li>
-<li><a href="https://github.com/gwbfbn385/djy/blob/master/gb/9/2/14/n2429943.md#1">一念不正招来妖孽</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gwbfbn385/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gwbfbn385/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/8/n11439099.htm">澳议员警告中共威胁如纳粹 需直面严峻挑战</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/8/n11439099.htm">澳议员警告中共威胁如纳粹 需直面严峻挑战</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/gwbfbn385/djy/blob/master/gb/19/8/8/n11439099.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gwbfbn385/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gwbfbn385/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gwbfbn385/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gwbfbn385/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwbfbn385/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/8/8/n11439099.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
